Alignment Fixing

--- a/src/App.css
+++ b/src/App.css
@@ -157,9 +157,11 @@ article {
 }
 @media (max-width: 800px) { 
   .heart-btn {
+    position: relative;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    left: 0;
+    margin-top: 15rem;
+    left: 0; 
   }
 }
